<resources>
    <string name="app_name">UBle</string>
    <string name="action_settings">Settings</string>
    <string name="response_title">Response:</string>
    <string name="deadbeef">deadbeef</string>
    <string name="send_message_to_dongle">Message to dongle...</string>
    <string name="connect">Connect</string>
    <string name="peripheral">Peripheral</string>
    <string name="disconnect">Disconnect</string>
    <string name="send_data">Send</string>
    <string name="message_title">Message for dongle</string>
    <string name="advertising_overview">Turn on advertising to make this device act as a connectable BLE peripheral</string>
    <string name="advertise">Advertise</string>
    <string name="connection_title">Connection with:</string>
    <string name="connecting">Connecting ...</string>
    <string name="stop_advertising">Stop advertising</string>
    <string name="name_title">Device name:</string>
    <string name="type_dongle_name">type your dongle name</string>
    <string name="loopback_mode">Loopback mode</string>
    <string name="title_notification_characteristic">Choose notification characteristic</string>
    <string name="choose">Choose</string>
    <string name="title_write_characteristic">Choose characteristic to write to</string>
    <string name="title_service">Choose service</string>

    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="disconnecting">Disconnecting ...</string>
    <string name="peripheral_log_title">Peripheral log</string>
    <string name="scanned_devices">Devices nearby:</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning ...</string>
    <string name="please_wait">Please wait</string>
    <string name="rssi_filter">RSSI filter</string>
    <string name="discovering_services">Discovering services...</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_is_off">Do you agree to turn on Bluetooth?</string>
    <string name="name_mac_filter">name/mac filter</string>
    <string name="set_bytes_count_mode">Ascending ascii chars</string>
    <string name="stream">Loop data</string>
    <string name="stream_delay">Delay millis</string>
    <string name="stream_iterations">Iterations</string>
    <string name="iterations_title">Number of iterations</string>
    <string name="iteration_delay_title">Delay between block</string>
    <string name="listen_to_audio">Decode audio</string>
    <string name="send_audio">Send audio</string>
    <string name="string_message">String message:</string>
    <string name="bytes_array_length">Bytes array length:</string>
</resources>
