<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ubudu.iot.sample.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:id="@+id/name_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_title" />

            <EditText
                android:id="@+id/type_dongle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textImeMultiLine"
                android:hint="@string/type_dongle_name"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

        <LinearLayout
            android:id="@+id/separator_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/communication_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/message_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_title" />

            <EditText
                android:id="@+id/send_message_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/send_message_to_dongle"
                android:text="@string/deadbeef" />

            <TextView
                android:id="@+id/response_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/response_title" />

            <TextView
                android:id="@+id/response_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" " />

            <Button
                android:id="@+id/send_data_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_data" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advertising_title" />

        <Button
            android:id="@+id/advertise_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advertise" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
